fix footer covering image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -141,4 +141,8 @@ li {
     li {
         line-height: 100px;
     }
+
+    .page-footer {
+       bottom: -197.2px;
+    }
 }
